# tlp-tool

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: CR-001-cfg-tlp-decode-and-endianness.md
src/: main.rs
tests/: cli.rs
tests/fixtures/: aer_output.txt  aer_output_flit.txt  aer_output_flit_0x.txt  flit_tlps.txt  lspci_output.txt  lspci_output_flit.txt  valid_tlps.txt
