[package]
name = "rtlp_tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtlp-lib = { git = "https://github.com/gotoco/rust_tlplib" }
clap = { version = "3.1.18", features = ["derive"] }
prettytable-rs = "^0.8"
