[package]
name = "rtlp_tool"
version = "0.5.2"
edition = "2024"
authors = ["Maciej Grochowski <maciej.grochowski@pm.me>"]
description = "CLI tool for parsing and displaying PCI Express TLP packet headers"
license = "BSD-3-Clause"
repository = "https://github.com/mmpg-x86/tlp-tool"

[package.metadata.deb]
maintainer = "Maciej Grochowski <maciej.grochowski@pm.me>"
license-file = ["LICENSE", "4"]
extended-description = """\
rtlp-tool parses raw PCI Express Transaction Layer Packet (TLP) headers \
into human-readable tables. Useful for debugging PCIe devices, \
analysing AER error reports, and inspecting Header Log registers."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/rtlp-tool", "usr/bin/rtlp-tool", "755"],
    ["README.md", "usr/share/doc/rtlp-tool/README.md", "644"],
    ["assets/rtlp-tool.1.gz", "usr/share/man/man1/rtlp-tool.1.gz", "644"],
]

[[bin]]
name = "rtlp-tool"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtlp-lib = "0.5.0"
clap = { version = "3.1.18", features = ["derive"] }
clap_complete = "3"
clap_mangen = "0.1"
prettytable-rs = "^0.10"
colored = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rtlp-tool", dest = "/usr/bin/rtlp-tool", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/rtlp-tool/README.md", mode = "644" },
    { source = "assets/rtlp-tool.1.gz", dest = "/usr/share/man/man1/rtlp-tool.1.gz", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/rtlp-tool/LICENSE", mode = "644" },
]
